--- a/package.json
+++ b/package.json
@@ -20,15 +20,18 @@
     "webpack-dev-server": "^2.2.0"
   },
   "dependencies": {
+    "animate.css": "^3.5.2",
     "babel-eslint": "^7.1.1",
     "eslint": "^3.14.1",
     "eslint-plugin-react": "^6.9.0",
     "file-loader": "^0.11.1",
+    "lodash": "^4.17.4",
     "materialize-css": "^0.98.2",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.4",
     "react-router": "^3.0.5",
+    "react-router-redux": "^4.0.8",
     "react-select": "^1.0.0-rc.4",
     "redux": "^3.6.0",
     "redux-logger": "^3.0.1",
