--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.4",
     "react-router": "^3.0.5",
+    "react-router-dom": "^4.1.1",
     "react-router-redux": "^4.0.8",
     "react-select": "^1.0.0-rc.4",
     "redux": "^3.6.0",
