--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "file-loader": "^0.11.1",
     "lodash": "^4.17.4",
     "materialize-css": "^0.98.2",
+    "moment": "^2.18.1",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.4",
